--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "JMD"
 uuid = "00e1be99-55c1-4ba9-bd65-147edc6912b3"
 authors = ["Ivan Anashkin <anashkin.ivan@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+
+[compat]
+CUDA = "5.5.2"
